; ModuleID = '/home/carl/AnghaBench/mongoose/examples/connected_device_4/extr_server.c_handle_ssi_call.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/connected_device_4/extr_server.c_handle_ssi_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.mg_connection = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"setting1\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@s_settings = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str.2 = private unnamed_addr constant [9 x i8] c"setting2\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_connection*, i8*)* @handle_ssi_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_ssi_call(%struct.mg_connection* %0, i8* %1) #0 {
  %3 = alloca %struct.mg_connection*, align 8
  %4 = alloca i8*, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = call i64 @strcmp(i8* %5, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load %struct.mg_connection*, %struct.mg_connection** %3, align 8
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_settings, i32 0, i32 1), align 4
  %11 = call i32 @mg_printf_html_escape(%struct.mg_connection* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  br label %21

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = call i64 @strcmp(i8* %13, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load %struct.mg_connection*, %struct.mg_connection** %3, align 8
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_settings, i32 0, i32 0), align 4
  %19 = call i32 @mg_printf_html_escape(%struct.mg_connection* %17, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  br label %21

21:                                               ; preds = %20, %8
  ret void
}

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @mg_printf_html_escape(%struct.mg_connection*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
